# costmap

./: .pre-commit-config.yaml  AGENTS.md  Cargo.toml  README.md
.cursor/plans/: api_ergonomics_improvements_cd851856.plan.md
.cursor/rules/: cargo-bench.mdc  run-cargo-fmt.mdc  single-responsibility-functions.mdc  use-glam-types.mdc
.github/workflows/: rust.yml
benches/: inflation.rs  line_iterator.rs  load_warehouse.rs  polygon_iter.rs  raycast.rs  resize_map.rs  update_origin.rs
docs/: grid_research.md
examples/: footprint_checking.rs  local_costmap_lidar.rs  occupancy_raycast.rs  profile_edt.rs  rerun_footprint_checking.rs  rerun_local_costmap_lidar.rs  rerun_occupancy_raycast.rs
src/: inflation.rs  lib.rs  nav2_compat.rs  rerun_viz.rs  visualization.rs
src/costmap/: layered.rs  merge.rs  mod.rs
src/grid/: grid2d.rs  helpers.rs  layered.rs  merge.rs  mod.rs  occupancy.rs  traits.rs  voxel.rs
src/iterators/: line.rs  polygon.rs
src/layers/: inflation.rs  mod.rs
src/layers/inflation/: edt.rs  mod.rs  wavefront.rs
src/loaders/: ros2.rs
src/raycast/: dda.rs  grid_step.rs  mod.rs  utils.rs
src/types/: constants.rs  costmap.rs  error.rs  geometry.rs  info.rs  mod.rs  occupancy_grid.rs
tests/: nav2_costmap_interface.rs  ros2_loader.rs
tests/fixtures/: simple.pgm  simple.yaml  warehouse.yaml
