[package]
name = "voxel_grid"
version = "0.1.0"
edition = "2024"

[dependencies]
glam = "0.30"
image = "0.25"
pixels = { version = "0.15", optional = true }
rerun = { version = "0.29", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "2.0"
winit = { version = "0.30", optional = true }

[dev-dependencies]
criterion = "0.5"
approx = { version = "0.5.1", default-features = false }

[features]
default = []
viewer = ["pixels", "winit"]
nav2_compat = []
voxel3d = []
rerun = ["dep:rerun"]

[[bin]]
name = "viewer"
path = "src/bin/viewer.rs"
required-features = ["viewer"]

[[example]]
name = "rerun_local_costmap_lidar"
path = "examples/rerun_local_costmap_lidar.rs"
required-features = ["rerun"]

[[example]]
name = "rerun_occupancy_raycast"
path = "examples/rerun_occupancy_raycast.rs"
required-features = ["rerun"]

[[bench]]
name = "load_warehouse"
harness = false

[[bench]]
name = "raycast"
harness = false

[[bench]]
name = "line_iterator"
harness = false

[[bench]]
name = "resize_map"
harness = false

[[bench]]
name = "update_origin"
harness = false
