[package]
name = "costmap"
version = "0.2.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "2D costmaps, occupancy grids, and raycasting for robotics navigation - a Nav2 alternative in pure Rust"
repository = "https://github.com/MJohnson459/costmap"
keywords = ["costmap", "occupancy-grid", "raycasting", "robotics", "nav2"]
categories = ["science", "algorithms", "simulation"]

[dependencies]
bitvec = "1.0"
glam = "0.30"
image = "0.25"
pixels = { version = "0.15", optional = true }
rerun = { version = "0.29", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "2.0"
winit = { version = "0.30", optional = true }

[dev-dependencies]
criterion = "0.8"
approx = { version = "0.5.1", default-features = false }

[features]
default = []
viewer = ["pixels", "winit"]
rerun = ["dep:rerun"]

[profile.release]
debug = true

[[bin]]
name = "viewer"
path = "src/bin/viewer.rs"
required-features = ["viewer"]

[[example]]
name = "footprint_checking"
path = "examples/footprint_checking.rs"
required-features = ["rerun"]

[[example]]
name = "local_costmap_lidar"
path = "examples/local_costmap_lidar.rs"
required-features = ["rerun"]

[[example]]
name = "occupancy_raycast"
path = "examples/occupancy_raycast.rs"
required-features = ["rerun"]

[[bench]]
name = "load_warehouse"
harness = false

[[bench]]
name = "raycast"
harness = false

[[bench]]
name = "line_iterator"
harness = false

[[bench]]
name = "resize_map"
harness = false

[[bench]]
name = "update_origin"
harness = false

[[bench]]
name = "inflation"
harness = false
